--- a/package.json
+++ b/package.json
@@ -1,71 +1,108 @@
 {
-  "name": "hue-crm",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "hueCRM",
+  "version": "0.1.0",
   "license": "MIT",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/angular/universal-starter.git"
   },
+  "contributors": [
+    "AngularClass <hello@angularclass.com>",
+    "PatrickJS <patrick@angularclass.com>",
+    "Jeff Whelpley <jeff@gethuman.com>",
+    "Jeff Cross <crossj@google.com>",
+    "Mark Pieszak <mpieszak84@gmail.com>",
+    "Jason Jean <jasonjean1993@gmail.com>",
+    "Fabian Wiles <fabian.wiles@gmail.com>",
+    "Kamil Myśliwiec <mail@kamilmysliwiec.com>",
+    "Michael Prentice <michael.prentice@devintent.com>"
+  ],
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "start:server": "nodemon",
+    "serve": "node serve-script",
+    "build": "ng build",
+    "lint": "ng lint hueCRM",
+    "build:client-and-server-bundles": "ng build --prod && ng run hueCRM:server:production",
+    "build:prerender": "npm run build:client-and-server-bundles && npm run webpack:server && npm run generate:prerender",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "generate:prerender": "cd dist && node prerender",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:prerender": "cd dist/browser && http-server -p 8080",
+    "serve:ssr": "node dist/server"
+  },
+  "pre-commit": [],
+  "private": true,
   "dependencies": {
-    "@nestjs/common": "^6.7.2",
-    "@nestjs/core": "^6.7.2",
+    "@angular/animations": "~8.1.1",
+    "@angular/cdk": "^8.0.0",
+    "@angular/common": "~8.1.1",
+    "@angular/compiler": "~8.1.1",
+    "@angular/core": "~8.1.1",
+    "@angular/forms": "~8.1.1",
+    "@angular/platform-browser": "~8.1.1",
+    "@angular/platform-browser-dynamic": "~8.1.1",
+    "@angular/platform-server": "~8.1.1",
+    "@angular/router": "~8.1.1",
+    "@nebular/eva-icons": "4.3.1",
+    "@nebular/theme": "^4.3.1",
+    "@nestjs/common": "^6.5.2",
+    "@nestjs/core": "^6.5.2",
     "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/platform-express": "^6.7.2",
-    "@nestjs/platform-fastify": "^6.7.2",
+    "@nestjs/ng-universal": "^2.0.0",
+    "@nestjs/platform-express": "^6.5.2",
+    "@nestjs/platform-fastify": "^6.8.2",
     "@nestjs/swagger": "^3.1.0",
+    "@nguniversal/common": "8.1.1",
+    "@nguniversal/express-engine": "8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.1",
+    "class-validator": "^0.9.1",
+    "classlist.js": "1.1.20150312",
+    "core-js": "^2.6.5",
     "dotenv": "^8.1.0",
-    "fastify-swagger": "^2.4.0",
-    "mongoose": "^5.7.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3",
-    "swagger": "^0.7.5"
+    "dragula": "https://github.com/DevIntent/dragula.git#3.7.4",
+    "eva-icons": "^1.1.1",
+    "mongoose": "^5.7.3",
+    "ng2-dragula": "2.1.1",
+    "rxjs": "~6.5.2",
+    "swagger-ui-express": "^4.1.2",
+    "terser": "^4.1.2",
+    "tsconfig-paths": "^3.8.0",
+    "tslib": "^1.10.0",
+    "webpack-cli": "3.3.6",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.9.0",
-    "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.7.1",
-    "@types/express": "^4.17.1",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.5",
-    "@types/supertest": "^2.0.8",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.1.1",
-    "ts-node": "^8.4.1",
-    "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node"
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/cli": "~8.1.1",
+    "@angular/compiler-cli": "~8.1.1",
+    "@angular/language-service": "~8.1.1",
+    "@schematics/angular": "~8.1.1",
+    "@types/jasmine": "~3.3.13",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~12.6.2",
+    "codelyzer": "^5.0.1",
+    "cpy-cli": "2.0.0",
+    "express": "4.17.1",
+    "http-server": "0.11.1",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "~3.0.0",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "mini-css-extract-plugin": "^0.7.0",
+    "nodemon": "^1.19.1",
+    "pre-commit": "1.2.2",
+    "protractor": "~5.4.2",
+    "reflect-metadata": "0.1.13",
+    "ts-loader": "6.0.4",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "^3.4.4",
+    "wait-on": "^3.3.0"
   }
 }
