--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.2.4",
     "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.2.4",
     "@nestjs/platform-fastify": "^6.8.2",
     "@nestjs/swagger": "^3.1.0",
     "@nrwl/angular": "8.6.0",
     "@types/jest": "24.0.9",
+    "@types/passport-jwt": "^3.0.2",
+    "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "classlist.js": "1.1.20150312",
@@ -55,6 +58,9 @@
     "dotenv": "^8.1.0",
     "eva-icons": "^1.1.1",
     "mongoose": "^5.7.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.5.2",
     "swagger-ui-express": "^4.1.2",
@@ -73,7 +79,11 @@
     "@nrwl/node": "8.6.0",
     "@nrwl/workspace": "8.6.0",
     "@schematics/angular": "8.3.3",
+    "@types/dotenv": "^6.1.1",
+    "@types/jest": "24.0.9",
+    "@types/mongoose": "^5.5.20",
     "@types/node": "~8.9.4",
+    "@types/passport-local": "^1.0.33",
     "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
     "eslint": "6.1.0",
