--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,6 @@
       "@hue-crm/api-interfaces": [
         "libs/api-interfaces/src/index.ts"
       ],
-      "@hue-crm/models/login": [
-        "libs/models/login/src/index.ts"
-      ],
       "@hue-crm/dto": [
         "libs/dto/src/index.ts"
       ],
@@ -36,8 +33,8 @@
       "@hue-crm/enums": [
         "libs/enums/src/index.ts"
       ],
-      "@hue-crm/models": [
-        "libs/models/src/index.ts"
+      "@hue-crm/mongoose-models": [
+        "libs/mongoose-models/src/index.ts"
       ]
     }
   },
