--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.8.5",
     "@nestjs/platform-fastify": "^6.8.5",
-    "@nestjs/swagger": "^3.1.0",
+    "@nestjs/swagger": "^4.0.0-next.2",
     "@nrwl/angular": "8.6.0",
     "@types/passport-jwt": "^3.0.2",
     "bcrypt": "^3.0.6",
