--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hue-crm",
+  "name": "huecrm",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -29,70 +29,68 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.13",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/router": "^8.2.13",
-    "@nebular/eva-icons": "^4.5.0",
-    "@nebular/theme": "^4.5.0",
-    "@nestjs/common": "^6.8.5",
-    "@nestjs/core": "^6.8.5",
+    "@angular/animations": "^8.2.0",
+    "@angular/common": "^8.2.0",
+    "@angular/compiler": "^8.2.0",
+    "@angular/core": "^8.2.0",
+    "@angular/forms": "^8.2.0",
+    "@angular/platform-browser": "^8.2.0",
+    "@angular/platform-browser-dynamic": "^8.2.0",
+    "@angular/router": "^8.2.0",
+    "@nestjs/common": "^6.8.3",
+    "@nestjs/core": "^6.8.3",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.8.5",
-    "@nestjs/platform-fastify": "^6.8.5",
-    "@nestjs/swagger": "^4.0.0-next.2",
-    "@nrwl/angular": "8.6.0",
-    "@types/passport-jwt": "^3.0.2",
-    "bcrypt": "^3.0.6",
+    "@nestjs/platform-express": "^6.8.3",
+    "@nestjs/swagger": "^3.1.0",
+    "@nrwl/angular": "8.8.2",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.9.1",
-    "classlist.js": "1.1.20150312",
-    "core-js": "^2.6.10",
-    "dotenv": "^8.2.0",
-    "eva-icons": "^1.1.2",
-    "mongoose": "^5.7.7",
-    "passport": "^0.4.0",
+    "class-validator": "^0.11.0",
+    "core-js": "^2.5.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.12",
     "passport-jwt": "^4.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1",
+    "@nestjs/platform-fastify": "^6.10.1",
+    "@types/passport-jwt": "^3.0.3",
+    "classlist.js": "^1.1.20150312",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "~6.5.2",
     "supertest": "^4.0.2",
-    "swagger-ui-express": "^4.1.2",
-    "zone.js": "^0.9.1"
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.17",
-    "@angular/cli": "8.3.3",
-    "@angular/compiler-cli": "^8.2.13",
-    "@angular/language-service": "^8.2.13",
-    "@nestjs/schematics": "^6.3.0",
-    "@nestjs/testing": "^6.8.5",
-    "@nrwl/cypress": "8.6.0",
-    "@nrwl/jest": "8.6.0",
-    "@nrwl/nest": "8.6.0",
-    "@nrwl/node": "8.6.0",
-    "@nrwl/workspace": "8.6.0",
-    "@schematics/angular": "8.3.3",
-    "@types/dotenv": "^6.1.1",
-    "@types/jest": "^24.0.21",
-    "@types/mongoose": "^5.5.28",
+    "@angular/cli": "8.3.14",
+    "@nrwl/workspace": "8.8.2",
     "@types/node": "~8.9.4",
-    "@types/passport-local": "^1.0.33",
-    "codelyzer": "~5.0.1",
-    "cypress": "3.4.1",
-    "eslint": "6.1.0",
-    "jest": "^24.9.0",
-    "jest-preset-angular": "7.0.0",
-    "prettier": "1.18.2",
-    "ts-jest": "24.0.0",
+    "dotenv": "6.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "eslint": "6.1.0",
+    "typescript": "~3.5.3",
+    "prettier": "1.18.2",
+    "@nrwl/nest": "8.8.2",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
+    "@angular-devkit/build-angular": "^0.803.14",
+    "codelyzer": "~5.0.1",
+    "jest-preset-angular": "7.0.0",
+    "@nrwl/jest": "8.8.2",
+    "jest": "24.1.0",
+    "@types/jest": "24.0.9",
+    "ts-jest": "24.0.0",
+    "cypress": "3.4.1",
+    "@nrwl/cypress": "8.8.2",
+    "@nrwl/node": "8.8.2",
+    "@nestjs/schematics": "^6.7.0",
+    "@nestjs/testing": "^6.8.3",
+    "@ngrx/store-devtools": "^8.5.2",
+    "@nrwl/angular": "^8.8.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/mongoose": "^5.5.32",
+    "@types/passport-local": "^1.0.33"
   }
 }
