--- a/.env.dev.example
+++ b/.env.dev.example
@@ -1,4 +1,10 @@
 HOSTNAME=localhost
-DATABASE=mongodb://localhost/hueCRM
+PROTOCOL=http://
 PORT=3000
+URL=http://localhost:3000/
+DATABASE=mongodb://localhost/hueCRM
+DATABASE_TEST=mongodb://localhost/testHueCRM
 DEVMODE=true
+PAYLOAD_SESSION_TIME=30d
+AUTH_TOKEN=Dsr+'y0WbP]7g^a!6
+
