--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,12 @@
     },
     "mongoose-models": {
       "tags": []
+    },
+    "services": {
+      "tags": []
+    },
+    "components": {
+      "tags": []
     }
   }
 }
