--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.0.0",
     "@angular/common": "^8.2.0",
     "@angular/compiler": "^8.2.0",
     "@angular/core": "^8.2.0",
@@ -37,60 +38,66 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
+    "@nebular/auth": "^4.5.0",
+    "@nebular/eva-icons": "^4.5.0",
+    "@nebular/security": "^4.5.0",
+    "@nebular/theme": "^4.5.0",
     "@nestjs/common": "^6.8.3",
     "@nestjs/core": "^6.8.3",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.8.3",
+    "@nestjs/platform-fastify": "^6.10.1",
     "@nestjs/swagger": "^3.1.0",
     "@nrwl/angular": "8.8.2",
+    "@types/passport-jwt": "^3.0.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "eva-icons": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
+    "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
-    "@nestjs/platform-fastify": "^6.10.1",
-    "@types/passport-jwt": "^3.0.3",
-    "classlist.js": "^1.1.20150312",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "supertest": "^4.0.2",
-    "swagger-ui-express": "^4.1.2"
+    "swagger-ui-express": "^4.1.2",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.14",
     "@angular/cli": "8.3.14",
-    "@nrwl/workspace": "8.8.2",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.5.3",
-    "prettier": "1.18.2",
-    "@nrwl/nest": "8.8.2",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.14",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.8.2",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
-    "cypress": "3.4.1",
-    "@nrwl/cypress": "8.8.2",
-    "@nrwl/node": "8.8.2",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.8.3",
     "@ngrx/store-devtools": "^8.5.2",
     "@nrwl/angular": "^8.8.2",
+    "@nrwl/cypress": "8.8.2",
+    "@nrwl/jest": "8.8.2",
+    "@nrwl/nest": "8.8.2",
+    "@nrwl/node": "8.8.2",
+    "@nrwl/workspace": "8.8.2",
+    "@schematics/angular": "8.3.14",
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "24.0.9",
     "@types/mongoose": "^5.5.32",
-    "@types/passport-local": "^1.0.33"
+    "@types/node": "~8.9.4",
+    "@types/passport-local": "^1.0.33",
+    "codelyzer": "~5.0.1",
+    "cypress": "3.4.1",
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.5.3"
   }
 }
