--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "nx": "nx",
+    "serve:hue-crm": "ts-node config-env.hue-crm.ts && ng serve hue-crm",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -41,7 +42,7 @@
     "@angular/router": "^8.2.0",
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@google/maps": "^1.0.2",
-    "@nebular/auth": "^4.5.0",
+    "@nebular/auth": "^4.6.0",
     "@nebular/eva-icons": "^4.5.0",
     "@nebular/security": "^4.5.0",
     "@nebular/theme": "^4.5.0",
@@ -68,6 +69,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.1",
+    "fs": "0.0.1-security",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -91,7 +93,7 @@
     "socicon": "3.0.5",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.2",
-    "tinymce": "4.5.7",
+    "tinymce": "^4.5.7",
     "tslib": "^1.9.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "github:angular/web-animations-js#release_pr208",
@@ -114,6 +116,7 @@
     "@nrwl/node": "8.8.2",
     "@nrwl/workspace": "8.8.2",
     "@schematics/angular": "8.3.14",
+    "@types/convict": "^4.2.1",
     "@types/d3-color": "1.0.5",
     "@types/dotenv": "^8.2.0",
     "@types/googlemaps": "^3.38.0",
@@ -122,12 +125,12 @@
     "@types/jest": "24.0.9",
     "@types/leaflet": "1.2.3",
     "@types/mongoose": "^5.5.32",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "@types/passport-local": "^1.0.33",
     "codelyzer": "~5.0.1",
     "conventional-changelog-cli": "1.3.4",
     "cypress": "3.4.1",
-    "dotenv": "6.2.0",
+    "dotenv": "^6.2.0",
     "eslint": "6.1.0",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
@@ -146,9 +149,9 @@
     "rimraf": "2.6.1",
     "stylelint": "7.13.0",
     "ts-jest": "24.0.0",
-    "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "tslint-language-service": "^0.9.9",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "val-loader": "^2.1.0"
   }
 }
