--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2018",
     "module": "esnext",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
+      "es2018",
       "dom"
     ],
     "skipLibCheck": true,
@@ -53,6 +53,9 @@
       ],
       "@huecrm/pages": [
         "libs/pages/src/index.ts"
+      ],
+      "@huecrm/config": [
+        "libs/config/src/index.ts"
       ]
     }
   },
