Logger for issue #8

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -7,6 +7,13 @@ DATABASE_TEST=mongodb://localhost/testHueCRM
 DEVMODE=true
 PAYLOAD_SESSION_TIME=30d
 AUTH_TOKEN=ENTER_AUTH_TOKEN
+####LOGGER SETTINGS####
+LOG_DIRECTORY=logs
+LOG_ERROR_NAME=error.log
+LOG_COMBINED_NAME=combined.log
+LOG_MAX_FILES=4
+LOG_MAX_SIZE=20971520
+LOG_LEVEL=error
 ####MAIN ENDPOINTS####
 HOME_URL='home'
 SETTINGS_URL='settings'
