--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "leaflet": "1.2.0",
     "mongoose": "^5.7.12",
     "nebular-icons": "1.1.0",
+    "nest-winston": "^1.3.1",
     "ng2-ckeditor": "^1.2.2",
     "ng2-completer": "2.0.8",
     "ng2-smart-table": "1.3.5",
@@ -97,6 +98,7 @@
     "tslib": "^1.9.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "github:angular/web-animations-js#release_pr208",
+    "winston": "^3.2.1",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
