--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nebular/theme": "^5.0.0",
     "@nestjs/common": "^7.0.8",
     "@nestjs/core": "^7.0.8",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.8",
