--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "private": true,
   "dependencies": {
+    "@akveo/ng2-completer": "^9.0.1",
     "@angular/animations": "^9.1.2",
     "@angular/cdk": "^9.1.2",
     "@angular/common": "^9.1.2",
@@ -69,6 +70,7 @@
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-sequence": "^5.2.2",
     "nebular-icons": "^1.1.0",
+    "ng2-smart-table": "^1.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
