Front-end authentication adjustments, add Bearer token to header requests.

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -6,7 +6,7 @@ DATABASE=mongodb://localhost/hueCRM
 DATABASE_TEST=mongodb://localhost/testHueCRM
 DEVMODE=true
 PAYLOAD_SESSION_TIME=30d
-AUTH_TOKEN=ENTER_AUTH_TOKEN
+AUTH_TOKEN=Dsr+y0WbP]7g^a!6
 ####LOGGER SETTINGS####
 LOG_DIRECTORY=logs
 LOG_ERROR_NAME=error.log
@@ -18,14 +18,13 @@ LOG_LEVEL=error
 HOME_URL='home'
 SETTINGS_URL='settings'
 LOGIN_URL='login'
-AUTH_URL='auth'
+AUTH_URL='users'
 LEADS_URL='leads'
 ####AUTH ENDPOINTS####
 ALL_USERS='api/auth/allUsers'
 LOGIN='api/auth/login'
 REGISTER='api/auth/register'
 AUTH_DELETE='api/auth/delete'
-
 ####LEAD ENDPOINTS####
 API_LEAD_MODEL='api/leads/leadModel'
 API_ALL_LEADS='api/leads/allLeads'
@@ -33,3 +32,7 @@ API_CREATE_LEAD_ENDPOINT='api/leads/createLead'
 API_GET_LEAD_BY_ID='api/leads/getLeadById'
 API_UPDATE_LEAD='api/leads/updateLeadById'
 API_DELETE_LEAD='api/leads/deleteLeadByEmail'
+####MODEL ENDPOINTS####
+API_MODEL_LEAD_COLUMN='api/moduleModel/leads'
+
+
